secure-access-web-app/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-portal
  labels:
    run: internal-portal
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: internal-portal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-portal
spec:
  selector:
    matchLabels:
      run: internal-portal
  replicas: 2
  template:
    metadata:
      labels:
        run: internal-portal
    spec:
      containers:
      - name: internal-portal
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /usr/share/nginx/html/index.html
            name: nginx-conf
            subPath: index.html
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-index-html-configmap
